--- a/hume-helm/templates/deployment.yaml
+++ b/hume-helm/templates/deployment.yaml
@@ -46,9 +46,11 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "hume-helm.fullname" . }}-web-configmap
-            {{- if .Values.web.additionalSecretsStore }}
+            {{- if .Values.web.extraSecrets }}
+            {{- range .Values.web.extraSecrets }}
             - secretRef:
-                name: {{ .Values.web.additionalSecretsStore }}
+                name: {{ . }}
+            {{- end }}
             {{- end }}
           env:
             {{- with .Values.web.env }}
@@ -128,9 +130,11 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "hume-helm.fullname" . }}-api-configmap
-            {{- if .Values.api.additionalSecretsStore }}
+            {{- if .Values.api.extraSecrets }}
+            {{- range .Values.api.extraSecrets }}
             - secretRef:
-                name: {{ .Values.api.additionalSecretsStore }}
+                name: {{ . }}
+            {{- end }}
             {{- end }}
             - secretRef:
                 name: hume-licence
