--- a/hume-alerting/Chart.yaml
+++ b/hume-alerting/Chart.yaml
@@ -3,7 +3,7 @@ name: hume-alerting
 description: A Helm chart for Kubernetes
 type: application
 icon: https://s3.eu-west-1.amazonaws.com/www-graphaware-com.infra.graphaware.com/favicon.ico
-version: "2.20.0-SNAPSHOT"
+version: "0.0.12"
 appVersion: "2.20.0-SNAPSHOT"
 dependencies:
   - name: postgresql
