--- a/hume-alerting/templates/alerting-controller-configmap.yaml
+++ b/hume-alerting/templates/alerting-controller-configmap.yaml
@@ -22,4 +22,8 @@ data:
   controller.remoteEventsEnabled: "{{ .Values.controller.remoteEventsEnabled }}"
   controller.execution.ttl.active: {{ .Values.controller.execution_ttl_active | quote }}
   controller.execution.ttl.ms: {{ .Values.controller.execution_ttl_ms | quote }}
+  management.server.port: "{{ .Values.controller.metrics.port }}"
+  {{- if .Values.controller.metrics.enabled }}
+  management.endpoints.web.exposure.include: {{ .Values.operator.management_endpoints_web_exposure_include }}
+  {{- end }}
 ---
