--- a/hume-helm/Chart.yaml
+++ b/hume-helm/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: hume
 home: https://www.graphaware.com
-version: "2.20.0-SNAPSHOT"
+version: "0.0.12"
 appVersion: "2.20.0-SNAPSHOT"
 type: application
 icon: https://s3.eu-west-1.amazonaws.com/www-graphaware-com.infra.graphaware.com/favicon.ico
@@ -38,6 +38,6 @@ dependencies:
       condition: neo4j.enabled
       alias: neo4j
     - name: hume-alerting
-      version: "2.20.0-SNAPSHOT"
+      version: "0.0.12"
       repository: "https://docker.graphaware.com/chartrepo/public" 
       condition: alerting.enabled
