--- a/hume-alerting/templates/deployment.yaml
+++ b/hume-alerting/templates/deployment.yaml
@@ -113,7 +113,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "hume-alerting.selectorLabels" . | nindent 8 }}
+        app: {{ include "hume-alerting.fullname" . }}-operator
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
