--- a/hume-helm/Chart.yaml
+++ b/hume-helm/Chart.yaml
@@ -33,6 +33,6 @@ dependencies:
       alias: keycloak
       condition: keycloak.internal.enabled
     - name: hume-alerting
-      version: "2.20.0-SNAPSHOT"
+      version: "2.20.0-RC"
       repository: "https://docker.graphaware.com/chartrepo/public" 
       condition: alerting.enabled
