--- a/hume-helm/templates/orchestra-statefulset.yml
+++ b/hume-helm/templates/orchestra-statefulset.yml
@@ -42,6 +42,9 @@ spec:
             - name: metrics
               containerPort: 7001
               protocol: TCP
+            {{- with .Values.orchestra.additionalPorts }}
+            {{- toYaml . | nindent 12 }}
+            {{- end }}
           startupProbe:
             httpGet:
               path: {{ .Values.orchestra.startupProbe.path }}
