--- a/hume-helm/Chart.yaml
+++ b/hume-helm/Chart.yaml
@@ -34,5 +34,5 @@ dependencies:
       condition: keycloak.internal.enabled
     - name: hume-alerting
       version: "2.21.0-SNAPSHOT"
-      repository: "https://docker.graphaware.com/chartrepo/public" 
+      repository: "oci://docker.graphaware.com/public"
       condition: alerting.enabled
