--- a/hume-helm/templates/orchestra-statefulset.yml
+++ b/hume-helm/templates/orchestra-statefulset.yml
@@ -110,6 +110,10 @@ spec:
             {{- with .Values.orchestra.volumeMounts }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
+      {{- with .Values.orchestra.initContainers }}
+      initContainers:
+        {{- toYaml . | nindent 8}}
+      {{- end }}
       volumes:
         {{- with .Values.orchestra.volumes }}
         {{- toYaml . | nindent 8 }}
