--- a/hume-alerting/templates/service.yaml
+++ b/hume-alerting/templates/service.yaml
@@ -13,3 +13,23 @@ spec:
       name: http
   selector:
     app: {{ include "hume-alerting.fullname" . }}-controller
+---
+{{- if .Values.api.metrics.enabled }}
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "hume-alerting.fullname" . }}-controller-metrics
+  labels:
+    {{- include "hume-alerting.labels" . | nindent 4 }}
+    app.kubernetes.io/component: alerting-controller-metrics
+spec:
+  type: {{ .Values.controller.metrics.service.type }}
+  ports:
+    - port: {{ .Values.controller.metrics.service.port }}
+      targetPort: {{ .Values.controller.metrics.service.targetPort }}
+      protocol: TCP
+      name: metrics
+  selector:
+    app: {{ include "hume-alerting.fullname" . }}-controller
+{{- end }}
+---
