--- a/hume-alerting/templates/service.yaml
+++ b/hume-alerting/templates/service.yaml
@@ -14,7 +14,7 @@ spec:
   selector:
     app: {{ include "hume-alerting.fullname" . }}-controller
 ---
-{{- if .Values.api.metrics.enabled }}
+{{- if .Values.controller.metrics.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
