--- a/hume-alerting/templates/deployment.yaml
+++ b/hume-alerting/templates/deployment.yaml
@@ -71,13 +71,13 @@ spec:
           livenessProbe:
              httpGet:
                path: /actuator/health
-               port: http
+               port: metrics
              initialDelaySeconds: 20
              periodSeconds: 20
           readinessProbe:
              httpGet:
                path: /actuator/health
-               port: http
+               port: metrics
              failureThreshold: 10
              initialDelaySeconds: 20
              periodSeconds: 20
