--- a/hume-alerting/templates/service.yaml
+++ b/hume-alerting/templates/service.yaml
@@ -33,3 +33,22 @@ spec:
     app: {{ include "hume-alerting.fullname" . }}-controller
 {{- end }}
 ---
+{{- if .Values.operator.metrics.enabled }}
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "hume-alerting.fullname" . }}-operator-metrics
+  labels:
+    {{- include "hume-alerting.labels" . | nindent 4 }}
+    app.kubernetes.io/component: alerting-operator-metrics
+spec:
+  type: {{ .Values.operator.metrics.service.type }}
+  ports:
+    - port: {{ .Values.operator.metrics.service.port }}
+      targetPort: {{ .Values.operator.metrics.service.targetPort }}
+      protocol: TCP
+      name: metrics
+  selector:
+    app: {{ include "hume-alerting.fullname" . }}-operator
+{{- end }}
+---
