--- a/hume-alerting/values.yaml
+++ b/hume-alerting/values.yaml
@@ -114,6 +114,19 @@ operator:
     #     secretKeyRef:
     #       key: db-username
     #       name: alerting-operator-postgres-db-username
+  metrics:
+    enabled: false
+    service:
+      type: ClusterIP
+      port: 7001
+      targetPort: metrics
+    serviceMonitor:
+      enabled: false
+      jobLabel: ""
+      port: metrics
+      path: '/actuator/prometheus'
+      interval: 30s
+      labels: {}
 
 imagePullSecrets:
   - name: graphaware-docker-creds
