fixed resources ref to values

--- a/hume-alerting/templates/deployment-controller.yml
+++ b/hume-alerting/templates/deployment-controller.yml
@@ -82,101 +82,7 @@ spec:
              initialDelaySeconds: 20
              periodSeconds: 20
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ include "hume-alerting.fullname" . }}-operator
-  labels:
-    {{- include "hume-alerting.labels" . | nindent 4 }}
-spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.operator.deployment.replicas | default 1 }}
-  {{- end }}
-  selector:
-    matchLabels:
-      app: {{ include "hume-alerting.fullname" . }}-operator
-  template:
-    metadata:
-      {{- with .Values.operator.podAnnotations }}
-      annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      labels:
-        {{- include "hume-alerting.selectorLabels" . | nindent 8 }}
-        app: {{ include "hume-alerting.fullname" . }}-operator
-    spec:
-      {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      serviceAccountName: {{ include "hume-alerting.serviceAccountName" . }}
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      containers:
-        - name: {{ include "hume-alerting.fullname" . }}-operator
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.humeAlertingOperatorBaseRepository }}{{ .Values.operator.image.name }}:{{ .Values.operator.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.operator.image.pullPolicy }}
-          ports:
-            - name: metrics
-              containerPort: 7001
-              protocol: TCP
-          envFrom:
-            - configMapRef:
-                name: {{ include "hume-alerting.fullname" . }}-operator-configmap
-            {{- if .Values.operator.extraSecrets }}
-            {{- range .Values.operator.extraSecrets }}
-            - secretRef:
-                name: {{ . }}
-            {{- end }}
-            {{- end }}
-            - configMapRef:
-            {{- if eq .Values.humeMessagingProvider "kafka" }}
-                name: {{ include "hume-alerting.fullname" . }}-kafka-configmap
-            {{- else if eq .Values.humeMessagingProvider "azure-servicebus-topics" }}
-                name: {{ include "hume-alerting.fullname" . }}-azure-sb-configmap
-            {{- end }}
-          env:
-            {{- with .Values.operator.env }}
-            {{- toYaml . | nindent 12 }}
-            {{- end }}
-            {{- if not .Values.postgresqlAlertingOperator.enabled }}
-            - name: spring.datasource.password
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.customAlertingOperatorPostgresql.global.postgresql.secretRef.existingSecret }}
-                  key: {{ .Values.customAlertingOperatorPostgresql.global.postgresql.secretRef.passwordSecretKey }}
-            {{- end }}
-          livenessProbe:
-             httpGet:
-               path: /actuator/health
-               port: metrics
-             initialDelaySeconds: 20
-             periodSeconds: 20
-          readinessProbe:
-             httpGet:
-               path: /actuator/health
-               port: metrics
-             failureThreshold: 10
-             initialDelaySeconds: 20
-             periodSeconds: 20
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+            {{- toYaml .Values.controller.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
