add volumes for eventstore deployment

--- a/hume-helm/values.yaml
+++ b/hume-helm/values.yaml
@@ -178,6 +178,10 @@ eventstore:
     #     secretKeyRef:
     #       key: db-username
     #       name: eventstore-postgres-db-username
+  # volumes templates configs to be set on the deployment
+  volumes: []
+  # volumeMounts config that will be set on the container
+  volumeMounts: []
   probes:
     livenessProbe:
       inititalDelaySeconds: 0
