--- a/hume-helm/templates/eventstore-deployment.yml
+++ b/hume-helm/templates/eventstore-deployment.yml
@@ -34,6 +34,10 @@ spec:
       {{ end }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      volumes:
+        {{- with .Values.eventstore.volumes }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       containers:
         - name: {{ include "hume-helm.fullname" . }}-eventstore
           securityContext:
