--- a/hume-alerting/Chart.yaml
+++ b/hume-alerting/Chart.yaml
@@ -3,8 +3,8 @@ name: hume-alerting
 description: A Helm chart for Kubernetes
 type: application
 icon: https://s3.eu-west-1.amazonaws.com/www-graphaware-com.infra.graphaware.com/favicon.ico
-version: "2.25.0-RC"
-appVersion: "2.25.0-RC1"
+version: "2.25.0"
+appVersion: "2.25.0"
 dependencies:
   - name: postgresql
     version: 12.1.5
