security stuff + other settings

--- a/hume-helm/templates/media-configmap.yml
+++ b/hume-helm/templates/media-configmap.yml
@@ -11,6 +11,31 @@ metadata:
   {{- end }}
 data:
   management.server.port: "7001"
+  {{- if .Values.media.storage.local.enabled }}
+  hume.media.storage.providers.local.enabled=true
+  hume.media.storage.providers.local.path.uploaded: {{ .Values.media.storage.local.uploadPath }}
+  hume.media.storage.providers.local.path.ready: {{ .Values.media.storage.local.readyPath }}
+  {{- end }}
+  {{- if .Values.keycloak.useKeycloak.enabled }}
+  hume.security.provider: 'keycloak'
+  keycloak.realm: {{ .Values.keycloak.realm }}
+  keycloak.resource: {{ .Values.keycloak.client }}
+  keycloak.public-client: 'true'
+  keycloak.principal-attribute: 'preferred_username'
+  keycloak.use-resource-role-mappings: 'true'
+  keycloak.enabled: 'true'
+  {{- if not .Values.keycloak.internal.enabled }}
+  keycloak.auth-server-url: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.keycloak.customKeycloak.customKeycloakEndpoint }}"
+  {{- else if and .Values.keycloak.internal.enabled .Values.ingress.enabled }}
+  keycloak.auth-server-url: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.keycloak.app.name }}{{ .Values.ingress.appNameSuffix }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}"
+  {{- else }}
+  keycloak.auth-server-url: "http://localhost:{{ .Values.keycloak.service.ports.http }}"
+  {{- end }}
+  {{- end }}
+  {{- else }}
+  hume.security.provider: 'native'
+  hume.media.security.native.jwt.signing-key: {{ .Values.media.security.native.jwt.signingKey }}
+  {{- end }}
   {{- if .Values.postgresqlMedia.enabled }}
   spring.datasource.url: "jdbc:postgresql://postgresql-media:{{ .Values.postgresqlMedia.global.postgresql.auth.servicePort }}/{{ .Values.postgresqlMedia.global.postgresql.auth.database }}"
   spring.datasource.username: {{ .Values.postgresqlMedia.global.postgresql.auth.username }}
@@ -22,5 +47,4 @@ data:
   {{- if .Values.media.metrics.enabled }}
   management.endpoints.web.exposure.include: "health,prometheus,info"
   {{- end }}
-{{- end }}
 ---
