--- a/hume-helm/templates/media-configmap.yml
+++ b/hume-helm/templates/media-configmap.yml
@@ -12,7 +12,7 @@ metadata:
 data:
   management.server.port: "7001"
   {{- if .Values.media.storage.local.enabled }}
-  hume.media.storage.providers.local.enabled=true
+  hume.media.storage.providers.local.enabled: 'true'
   hume.media.storage.providers.local.path.uploaded: {{ .Values.media.storage.local.uploadPath }}
   hume.media.storage.providers.local.path.ready: {{ .Values.media.storage.local.readyPath }}
   {{- end }}
